--- a/index.html
+++ b/index.html
@@ -1,158 +1,96 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Circulación: vías establecidas vs. informales</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <title>Heatmap de circulación | Plaza Los Dominicos</title>
+  <meta name="description" content="Visualización SVG responsive del heatmap de circulación peatonal por rango etario y momento.">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
     :root { color-scheme: light dark; }
-    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; margin: 0; padding: 16px; line-height: 1.45; }
-    header, main { max-width: 1080px; margin: 0 auto; }
-    header { margin-bottom: 24px; }
-    h1 { margin: 0 0 6px; }
-    h2 { margin: 32px 0 8px; }
-    .sub { color:#666; margin: 0 0 16px; }
-    .chart { margin: 20px 0 28px; }
-    .grid { display: grid; gap: 20px; }
-    @media (min-width: 900px){ .grid.two { grid-template-columns: 1fr 1fr; } }
-    .table-wrap { overflow-x: auto; border: 1px solid #e5e5e5; border-radius: 8px; }
-    table { border-collapse: collapse; width: 100%; font-size: 14px; }
-    th, td { padding: 10px 12px; border-bottom: 1px solid #eee; white-space: nowrap; }
-    th { position: sticky; top: 0; background: #fafafa; }
-    footer { margin: 40px 0 24px; font-size: 13px; color: #666; }
-    .note { font-size: 13px; color:#666; }
+    html, body { height: 100%; }
+    body {
+      font-family: "DM Sans", system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+      margin: 0; padding: 0; line-height: 1.5; background: Canvas; color: CanvasText;
+    }
+    header, main, footer { max-width: 1100px; margin: 0 auto; padding: clamp(16px, 3vw, 32px); }
+    header h1 { margin: 0 0 8px; font-size: clamp(22px, 4vw, 32px); }
+    header p { margin: 0; color: color-mix(in oklab, CanvasText 70%, transparent); }
+
+    .card {
+      background: color-mix(in oklab, Canvas 92%, CanvasText 8%);
+      border: 1px solid color-mix(in oklab, CanvasText 15%, transparent);
+      border-radius: 16px;
+      padding: clamp(12px, 2.5vw, 24px);
+      box-shadow: 0 1px 6px color-mix(in oklab, CanvasText 10%, transparent);
+    }
+    .figure {
+      display: grid; gap: 12px;
+    }
+    .figure img, .figure object, .figure svg {
+      width: 100%;
+      height: auto;
+      display: block;
+      border-radius: 12px;
+      background: #fff;
+    }
+    .controls {
+      display: flex; gap: 8px; flex-wrap: wrap;
+    }
+    .btn {
+      appearance: none; border: 1px solid color-mix(in oklab, CanvasText 20%, transparent);
+      background: color-mix(in oklab, Canvas 96%, CanvasText 4%);
+      color: CanvasText; border-radius: 10px; padding: 10px 14px;
+      font-weight: 600; cursor: pointer; text-decoration: none; font-size: 14px;
+    }
+    .btn:hover { background: color-mix(in oklab, Canvas 92%, CanvasText 8%); }
+    .meta { font-size: 13px; color: color-mix(in oklab, CanvasText 60%, transparent); }
+    footer { font-size: 13px; color: color-mix(in oklab, CanvasText 60%, transparent); }
+
+    /* Safe area para iPhone con notch */
+    @supports (padding: max(0px)) {
+      body { padding-bottom: env(safe-area-inset-bottom); }
+      header, main, footer { padding-left: max(16px, env(safe-area-inset-left)); padding-right: max(16px, env(safe-area-inset-right)); }
+    }
   </style>
-  <script src="https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6"></script>
 </head>
 <body>
   <header>
-    <h1>Circulación por rango etario</h1>
-    <p class="sub">Plaza Los Dominicos. Comparación entre vías establecidas e informales. Cada rango corresponde al promedio de los datos recopilados para ese grupo durante todos los días de observación.</p>
+    <h1>Heatmap de circulación</h1>
+    <p>Plaza Los Dominicos · Rango etario × momento del día · SVG responsive</p>
   </header>
 
   <main>
-    <section class="grid two">
-      <div>
-        <h2>Totales por rango — Vías establecidas</h2>
-        <div id="est-totales" class="chart"></div>
+    <section class="card">
+      <div class="figure">
+        <!-- Carga del SVG -->
+        <!-- Opción A (recomendada): <img> es veloz y responsive -->
+        <img src="heatmap_circulacion.svg" alt="Heatmap de circulación por rango etario y momento" loading="eager" fetchpriority="high">
+        <!-- Opción B (si quieres interactividad dentro del SVG): descomenta object -->
+        <!-- <object data="heatmap_circulacion.svg" type="image/svg+xml" aria-label="Heatmap" width="100%"></object> -->
       </div>
-      <div>
-        <h2>Totales por rango — Vías informales</h2>
-        <div id="inf-totales" class="chart"></div>
-      </div>
-    </section>
 
-    <section class="grid two">
-      <div>
-        <h2>Distribución por momento — Establecidas</h2>
-        <div id="est-apiladas" class="chart"></div>
-      </div>
-      <div>
-        <h2>Distribución por momento — Informales</h2>
-        <div id="inf-apiladas" class="chart"></div>
-      </div>
-    </section>
-
-    <section class="grid two">
-      <div>
-        <h2>Tabla — Establecidas</h2>
-        <div class="table-wrap"><table id="tabla-est"></table></div>
-        <p class="note">Totales: 1259 | Mañana (promedio por rango): 110 | Tarde (promedio por rango): 310</p>
-      </div>
-      <div>
-        <h2>Tabla — Informales</h2>
-        <div class="table-wrap"><table id="tabla-inf"></table></div>
-        <p class="note">Totales: 60 | Mañana (promedio por rango): 10 | Tarde (promedio por rango): 10</p>
+      <div class="controls" style="margin-top: 12px;">
+        <a class="btn" href="heatmap_circulacion.svg" download>Descargar SVG</a>
+        <a class="btn" href="heatmap_circulacion.svg" target="_blank" rel="noopener">Abrir en nueva pestaña</a>
+        <button class="btn" id="fit">Ajustar a ancho</button>
+        <button class="btn" id="zoom">Zoom 120%</button>
+        <span class="meta" id="status" aria-live="polite"></span>
       </div>
     </section>
   </main>
 
-  <footer>Hecho con Observable Plot. Visualización responsive.</footer>
+  <footer>
+    SVG optimizado para móvil. Tipografía DM Sans. Publicado con GitHub Pages.
+  </footer>
 
   <script>
-    // Datos embebidos (limpios a partir de tu CSV)
-    const momentos = [
-      "Jueves 07-08 10:00 (mañana)",
-      "Jueves 07-08 14:30 (tarde)",
-      "Viernes 08-08 10:00 (mañana)",
-      "Viernes 08-08 14:30 (tarde)",
-      "Sábado 09-08 10:00 (mañana)",
-      "Sábado 09-08 14:30 (tarde)"
-    ];
-
-    const establecidas = [
-      { "Rango etario":"0-5 años",  "Jueves 07-08 10:00 (mañana)":2,  "Jueves 07-08 14:30 (tarde)":11, "Viernes 08-08 10:00 (mañana)":4,  "Viernes 08-08 14:30 (tarde)":9,  "Sábado 09-08 10:00 (mañana)":10, "Sábado 09-08 14:30 (tarde)":4,  "Total":40,  "%":"3.18%", "Promedio rango":7, "Promedio mañana por rango etario":5, "Promedio tarde por rango etario":8 },
-      { "Rango etario":"6-18 años", "Jueves 07-08 10:00 (mañana)":3,  "Jueves 07-08 14:30 (tarde)":22, "Viernes 08-08 10:00 (mañana)":4,  "Viernes 08-08 14:30 (tarde)":36, "Sábado 09-08 10:00 (mañana)":21, "Sábado 09-08 14:30 (tarde)":0,  "Total":86,  "%":"6.83%", "Promedio rango":14, "Promedio mañana por rango etario":9, "Promedio tarde por rango etario":19 },
-      { "Rango etario":"19-30 años","Jueves 07-08 10:00 (mañana)":41, "Jueves 07-08 14:30 (tarde)":108,"Viernes 08-08 10:00 (mañana)":35, "Viernes 08-08 14:30 (tarde)":223,"Sábado 09-08 10:00 (mañana)":16, "Sábado 09-08 14:30 (tarde)":20, "Total":443, "%":"35.19%","Promedio rango":74, "Promedio mañana por rango etario":31, "Promedio tarde por rango etario":117 },
-      { "Rango etario":"31-60 años","Jueves 07-08 10:00 (mañana)":25, "Jueves 07-08 14:30 (tarde)":132,"Viernes 08-08 10:00 (mañana)":51, "Viernes 08-08 14:30 (tarde)":173,"Sábado 09-08 10:00 (mañana)":28, "Sábado 09-08 14:30 (tarde)":30, "Total":439, "%":"34.87%","Promedio rango":73, "Promedio mañana por rango etario":35, "Promedio tarde por rango etario":112 },
-      { "Rango etario":"61-90 años","Jueves 07-08 10:00 (mañana)":30, "Jueves 07-08 14:30 (tarde)":39, "Viernes 08-08 10:00 (mañana)":28, "Viernes 08-08 14:30 (tarde)":80, "Sábado 09-08 10:00 (mañana)":32, "Sábado 09-08 14:30 (tarde)":42, "Total":251, "%":"19.94%","Promedio rango":42, "Promedio mañana por rango etario":30, "Promedio tarde por rango etario":54 }
-    ];
-
-    const informales = [
-      { "Rango etario":"0-5 años",  "Jueves 07-08 10:00 (mañana)":0, "Jueves 07-08 14:30 (tarde)":0, "Viernes 08-08 10:00 (mañana)":0, "Viernes 08-08 14:30 (tarde)":0, "Sábado 09-08 10:00 (mañana)":2, "Sábado 09-08 14:30 (tarde)":3, "Total":5,  "%":"8.33%",  "Promedio rango":1, "Promedio mañana por rango etario":1, "Promedio tarde por rango etario":1 },
-      { "Rango etario":"6-18 años", "Jueves 07-08 10:00 (mañana)":0, "Jueves 07-08 14:30 (tarde)":1, "Viernes 08-08 10:00 (mañana)":0, "Viernes 08-08 14:30 (tarde)":4, "Sábado 09-08 10:00 (mañana)":0, "Sábado 09-08 14:30 (tarde)":5, "Total":10, "%":"16.67%", "Promedio rango":2, "Promedio mañana por rango etario":0, "Promedio tarde por rango etario":3 },
-      { "Rango etario":"19-30 años","Jueves 07-08 10:00 (mañana)":3, "Jueves 07-08 14:30 (tarde)":2, "Viernes 08-08 10:00 (mañana)":2, "Viernes 08-08 14:30 (tarde)":4, "Sábado 09-08 10:00 (mañana)":1, "Sábado 09-08 14:30 (tarde)":1, "Total":13, "%":"21.67%", "Promedio rango":2, "Promedio mañana por rango etario":2, "Promedio tarde por rango etario":2 },
-      { "Rango etario":"31-60 años","Jueves 07-08 10:00 (mañana)":6, "Jueves 07-08 14:30 (tarde)":3, "Viernes 08-08 10:00 (mañana)":2, "Viernes 08-08 14:30 (tarde)":1, "Sábado 09-08 10:00 (mañana)":9, "Sábado 09-08 14:30 (tarde)":2, "Total":23, "%":"38.33%", "Promedio rango":4, "Promedio mañana por rango etario":6, "Promedio tarde por rango etario":2 },
-      { "Rango etario":"61-90 años","Jueves 07-08 10:00 (mañana)":0, "Jueves 07-08 14:30 (tarde)":1, "Viernes 08-08 10:00 (mañana)":3, "Viernes 08-08 14:30 (tarde)":4, "Sábado 09-08 10:00 (mañana)":0, "Sábado 09-08 14:30 (tarde)":1, "Total":9, "%":"15.00%", "Promedio rango":2, "Promedio mañana por rango etario":1, "Promedio tarde por rango etario":2 }
-    ];
-
-    const palette = ["#b7e4c7","#95d5b2","#74c69d","#52b788","#2d6a4f"];
-
-    // Util: crear tabla
-    function renderTable(el, data) {
-      const cols = Object.keys(data[0]);
-      el.innerHTML = `
-        <thead><tr>${cols.map(c=>`<th>${c}</th>`).join("")}</tr></thead>
-        <tbody>${data.map(r=>`<tr>${cols.map(c=>`<td>${r[c]}</td>`).join("")}</tr>`).join("")}</tbody>
-      `;
-    }
-
-    // Barras horizontales por Total
-    function barrasTotales(data, mountId){
-      const plot = Plot.plot({
-        height: 360,
-        marginLeft: 140,
-        x: { label: "Personas" },
-        y: { label: null, tickSize: 0 },
-        color: { legend: false, range: palette },
-        marks: [
-          Plot.barX(data, { x: "Total", y: "Rango etario", fill: "Rango etario", inset: 2, tip: true }),
-          Plot.text(data, { x: d => d.Total + 6, y: "Rango etario", text: d => d.Total, anchor: "left" })
-        ]
-      });
-      document.getElementById(mountId).append(plot);
-    }
-
-    // Barras apiladas por momento
-    function barrasApiladas(data, mountId){
-      const tidy = [];
-      for (const row of data) {
-        for (const k of momentos) {
-          const v = row[k];
-          if (v != null && v !== "" && !isNaN(v)) tidy.push({ "Rango etario": row["Rango etario"], "Momento": k, "Valor": +v });
-        }
-      }
-      const plot = Plot.plot({
-        height: 440,
-        marginBottom: 90,
-        y: { label: "Personas" },
-        x: { label: null, tickRotate: 38 },
-        color: { legend: true, range: palette },
-        marks: [
-          Plot.barY(tidy, Plot.stackY({ x: "Momento", y: "Valor", fill: "Rango etario", tip: true }))
-        ]
-      });
-      document.getElementById(mountId).append(plot);
-    }
-
-    // Render
-    barrasTotales(establecidas, "est-totales");
-    barrasTotales(informales, "inf-totales");
-    barrasApiladas(establecidas, "est-apiladas");
-    barrasApiladas(informales, "inf-apiladas");
-    renderTable(document.getElementById("tabla-est"), establecidas);
-    renderTable(document.getElementById("tabla-inf"), informales);
+    // Controles simples: cambiar anchura del <img> para “zoom” sin perder calidad
+    const img = document.querySelector('.figure img');
+    const status = document.getElementById('status');
+    document.getElementById('fit').onclick = () => { img.style.width = '100%'; status.textContent = 'Ajustado al ancho del contenedor'; };
+    document.getElementById('zoom').onclick = () => { img.style.width = '120%'; status.textContent = 'Zoom al 120%'; };
   </script>
 </body>
 </html>
-
