--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
       border: 1px solid color-mix(in oklab, CanvasText 15%, transparent);
       border-radius: 16px;
       padding: clamp(12px, 2.5vw, 24px);
-      box-shadow: 0 1px 6px color-mix(in oklab, CanvasText 10%, transparent);
     }
     .figure {
       display: grid; gap: 12px;
@@ -82,7 +81,7 @@
   </main>
 
   <footer>
-    SVG optimizado para móvil. Tipografía DM Sans. Publicado con GitHub Pages.
+Lunes 25 de Agosto de 2025 | Taller de ideación y creatividad | Sección 1 | Publicado con GitHub Pages.
   </footer>
 
   <script>
