--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="es">
 <head>
@@ -9,49 +8,91 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
-    :root { color-scheme: light dark; }
+    /* Forzar light mode consistente en GitHub Pages */
+    :root { color-scheme: light; }
     html, body { height: 100%; }
     body {
       font-family: "DM Sans", system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-      margin: 0; padding: 0; line-height: 1.5; background: Canvas; color: CanvasText;
+      margin: 0; padding: 0; line-height: 1.5;
+      background: #ffffff; color: #111827; /* blanco + gris muy oscuro */
     }
     header, main, footer { max-width: 1100px; margin: 0 auto; padding: clamp(16px, 3vw, 32px); }
-    header h1 { margin: 0 0 8px; font-size: clamp(22px, 4vw, 32px); }
-    header p { margin: 0; color: color-mix(in oklab, CanvasText 70%, transparent); }
+    header h1 { margin: 0 0 8px; font-size: clamp(22px, 4vw, 32px); color: #0f172a; }
+    header p { margin: 0; color: #6b7280; }
 
     .card {
-      background: color-mix(in oklab, Canvas 92%, CanvasText 8%);
-      border: 1px solid color-mix(in oklab, CanvasText 15%, transparent);
+      background: #f8fafc; /* leve contraste en light */
+      border: 1px solid #e5e7eb;
       border-radius: 16px;
-      padding: clamp(12px, 2.5vw, 24px);
+      padding: clamp(16px, 3vw, 28px);
     }
+
     .figure {
-      display: grid; gap: 12px;
+      display: grid; gap: 14px;
     }
     .figure img, .figure object, .figure svg {
       width: 100%;
       height: auto;
       display: block;
       border-radius: 12px;
-      background: #fff;
+      background: #ffffff;
+      box-shadow: 0 1px 0 rgba(0,0,0,0.03);
     }
+
+    /* Controles con más aire y separación respecto del gráfico */
     .controls {
-      display: flex; gap: 8px; flex-wrap: wrap;
+      display: flex;
+      gap: 12px;            /* más espacio entre botones */
+      flex-wrap: wrap;
+      margin-top: 20px;     /* más espacio del gráfico hacia los botones */
     }
+
     .btn {
-      appearance: none; border: 1px solid color-mix(in oklab, CanvasText 20%, transparent);
-      background: color-mix(in oklab, Canvas 96%, CanvasText 4%);
-      color: CanvasText; border-radius: 10px; padding: 10px 14px;
-      font-weight: 600; cursor: pointer; text-decoration: none; font-size: 14px;
+      appearance: none;
+      border: 1px solid #e5e7eb;
+      background: #ffffff;
+      color: #111827;
+      border-radius: 10px;
+      padding: 12px 16px;   /* botones un poco más grandes */
+      font-weight: 600;
+      cursor: pointer;
+      text-decoration: none;
+      font-size: 14px;
+      transition: background-color .15s ease, border-color .15s ease, box-shadow .15s ease;
     }
-    .btn:hover { background: color-mix(in oklab, Canvas 92%, CanvasText 8%); }
-    .meta { font-size: 13px; color: color-mix(in oklab, CanvasText 60%, transparent); }
-    footer { font-size: 13px; color: color-mix(in oklab, CanvasText 60%, transparent); }
+    .btn:hover {
+      background: #f3f4f6;
+      border-color: #d1d5db;
+      box-shadow: 0 1px 0 rgba(0,0,0,0.04);
+    }
+    .btn:focus-visible {
+      outline: 2px solid #3b82f6;
+      outline-offset: 2px;
+    }
+
+    .meta {
+      align-self: center;
+      font-size: 13px;
+      color: #6b7280;
+    }
+
+    footer {
+      font-size: 13px;
+      color: #6b7280;
+    }
 
     /* Safe area para iPhone con notch */
     @supports (padding: max(0px)) {
       body { padding-bottom: env(safe-area-inset-bottom); }
-      header, main, footer { padding-left: max(16px, env(safe-area-inset-left)); padding-right: max(16px, env(safe-area-inset-right)); }
+      header, main, footer {
+        padding-left: max(16px, env(safe-area-inset-left));
+        padding-right: max(16px, env(safe-area-inset-right));
+      }
+    }
+
+    /* Preferencias del sistema: mantén siempre claro, ignorando dark */
+    @media (prefers-color-scheme: dark) {
+      :root { color-scheme: light; }
     }
   </style>
 </head>
@@ -71,7 +112,7 @@
         <!-- <object data="heatmap_circulacion.svg" type="image/svg+xml" aria-label="Heatmap" width="100%"></object> -->
       </div>
 
-      <div class="controls" style="margin-top: 12px;">
+      <div class="controls">
         <a class="btn" href="heatmap_circulacion.svg" download>Descargar SVG</a>
         <a class="btn" href="heatmap_circulacion.svg" target="_blank" rel="noopener">Abrir en nueva pestaña</a>
         <button class="btn" id="fit">Ajustar a ancho</button>
@@ -82,15 +123,23 @@
   </main>
 
   <footer>
-Lunes 25 de Agosto de 2025 | Taller de ideación y creatividad | Sección 1 | Publicado con GitHub Pages.
+    Lunes 25 de Agosto de 2025 | Taller de ideación y creatividad | Sección 1 | Publicado con GitHub Pages.
   </footer>
 
   <script>
     // Controles simples: cambiar anchura del <img> para “zoom” sin perder calidad
     const img = document.querySelector('.figure img');
     const status = document.getElementById('status');
-    document.getElementById('fit').onclick = () => { img.style.width = '100%'; status.textContent = 'Ajustado al ancho del contenedor'; };
-    document.getElementById('zoom').onclick = () => { img.style.width = '120%'; status.textContent = 'Zoom al 120%'; };
+    document.getElementById('fit').onclick = () => {
+      img.style.width = '100%';
+      img.style.maxWidth = '100%';
+      status.textContent = 'Ajustado al ancho del contenedor';
+    };
+    document.getElementById('zoom').onclick = () => {
+      img.style.width = '120%';
+      img.style.maxWidth = 'none';
+      status.textContent = 'Zoom al 120%';
+    };
   </script>
 </body>
 </html>
