--- a/index.html
+++ b/index.html
@@ -198,7 +198,6 @@
   <main>
     <section class="card">
       <p class="card-subtitle descripcion-grafico">
-        Este gráfico muestra la distribución de circulación según diferentes rangos etarios y franjas horarias en la plaza.
       </p>
       <div class="figure">
         <img src="heatmap_circulacion.svg" alt="Heatmap de circulación por rango etario y momento" loading="eager" fetchpriority="high">
@@ -227,10 +226,10 @@
             <th>Sáb 09-08 14:30</th>
             <th class="num">Total</th>
             <th class="num">%</th>
-            <th class="num">Prom. rango</th>
+            <th class="num">Promedio rango</th>
             <th></th>
-            <th class="num">Prom. mañana</th>
-            <th class="num">Prom. tarde</th>
+            <th class="num">Promedio mañana</th>
+            <th class="num">Promedio tarde</th>
           </tr>
           <tr><td>0-5 años</td><td class="num">2</td><td class="num">11</td><td class="num">4</td><td class="num">9</td><td class="num">10</td><td class="num">4</td><td class="num">40</td><td class="num">3.18%</td><td class="num">7</td><td></td><td class="num">5</td><td class="num">8</td></tr>
           <tr><td>6-18 años</td><td class="num">3</td><td class="num">22</td><td class="num">4</td><td class="num">36</td><td class="num">21</td><td class="num">0</td><td class="num">86</td><td class="num">6.83%</td><td class="num">14</td><td></td><td class="num">9</td><td class="num">19</td></tr>
@@ -254,10 +253,10 @@
             <th>Sáb 09-08 14:30</th>
             <th class="num">Total</th>
             <th class="num">%</th>
-            <th class="num">Prom. rango</th>
+            <th class="num">Promedio rango</th>
             <th></th>
-            <th class="num">Prom. mañana</th>
-            <th class="num">Prom. tarde</th>
+            <th class="num">Promedio mañana</th>
+            <th class="num">Promedio tarde</th>
           </tr>
           <tr><td>0-5 años</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">2</td><td class="num">3</td><td class="num">5</td><td class="num">8.33%</td><td class="num">1</td><td></td><td class="num">1</td><td class="num">1</td></tr>
           <tr><td>6-18 años</td><td class="num">0</td><td class="num">1</td><td class="num">0</td><td class="num">4</td><td class="num">0</td><td class="num">5</td><td class="num">10</td><td class="num">16.67%</td><td class="num">2</td><td></td><td class="num">0</td><td class="num">3</td></tr>
@@ -281,10 +280,10 @@
             <th>Sáb 09-08 14:30</th>
             <th class="num">Total</th>
             <th class="num">%</th>
-            <th class="num">Prom. rango</th>
+            <th class="num">Promedio rango</th>
             <th></th>
-            <th class="num">Prom. mañana</th>
-            <th class="num">Prom. tarde</th>
+            <th class="num">Promedio mañana</th>
+            <th class="num">Promedio tarde</th>
           </tr>
           <tr><td>0-5 años</td><td class="num">2</td><td class="num">11</td><td class="num">4</td><td class="num">9</td><td class="num">12</td><td class="num">7</td><td class="num">45</td><td class="num">3.41%</td><td class="num">8</td><td></td><td class="num">6</td><td class="num">9</td></tr>
           <tr><td>6-18 años</td><td class="num">3</td><td class="num">23</td><td class="num">4</td><td class="num">40</td><td class="num">21</td><td class="num">5</td><td class="num">96</td><td class="num">7.28%</td><td class="num">16</td><td></td><td class="num">9</td><td class="num">23</td></tr>
@@ -298,7 +297,10 @@
   </main>
 
   <footer>
-    Lunes 25 de Agosto de 2025 | Taller de ideación y creatividad | Sección 1 | Publicado con GitHub Pages.
+    Lunes 25 de Agosto de 2025 | Taller de ideación y creatividad | Sección 1
+    <div>
+    Código HTML publicado con <a href="https://github.com/antomarinooo" target="_blank" rel="noopener">@antomarinoo en github</a>
+    </div>
   </footer>
 </body>
 </html>
