--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Gráfico divergente -->
     <section class="card" id="divergente">
       <figure class="figure">
-        <img src="grafico-divergente.jpg" alt="Uso de vías establecidas vs informales por rango etario">
+        <img src="grafico-divergente.svg" alt="Uso de vías establecidas vs informales por rango etario">
         <figcaption>Comparación del uso de vías establecidas e informales por rango etario, mostrando preferencias de circulación según la edad.</figcaption>
       </figure>
     </section>
@@ -27,7 +27,7 @@
     <!-- Gráfico radial -->
     <section class="card" id="radial">
       <figure class="figure">
-        <img src="grafico-radial.jpg" alt="Distribución radial por rango etario y momento del día">
+        <img src="grafico-radial.svg" alt="Distribución radial por rango etario y momento del día">
         <figcaption>Distribución radial por rango etario: cada polígono representa un grupo de edad y su radio indica la intensidad por momento del día.</figcaption>
       </figure>
     </section>
@@ -35,7 +35,7 @@
     <!-- Heatmap -->
     <section class="card" id="heatmap">
       <figure class="figure">
-        <img src="grafico-heatmap.jpg" alt="Mapa de calor de circulación por rango etario y momento del día">
+        <img src="grafico-heatmap.svg" alt="Mapa de calor de circulación por rango etario y momento del día">
         <figcaption>Mapa de calor que visualiza la densidad de usuarios por rango etario y momento del día, destacando los picos de actividad.</figcaption>
       </figure>
     </section>
