--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
 
     <!-- Botones para descargas -->
     <section class="controls" aria-label="Descargas de gráficos">
-      <a class="btn" href="grafico-radial.jpg" download>Descargar gráfico radial</a>
-      <a class="btn" href="grafico-divergente.jpg" download>Descargar gráfico divergente</a>
-      <a class="btn" href="grafico-heatmap.jpg" download>Descargar heatmap</a>
+      <a class="btn" href="grafico-radial.svg" download>Descargar gráfico radial</a>
+      <a class="btn" href="grafico-divergente.svg" download>Descargar gráfico divergente</a>
+      <a class="btn" href="grafico-heatmap.svg" download>Descargar heatmap</a>
     </section>
   </main>
 
