--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     <section class="card" id="heatmap">
       <figure class="figure">
         <img src="grafico-heatmap.svg" alt="Mapa de calor de circulación por rango etario y momento del día">
-        <figcaption>Mapa de calor que visualiza la densidad de usuarios por rango etario y momento del día, destacando los picos de actividad.</figcaption>
+        <figcaption>Mapa de calor que visualiza la densidad de usuarios por rango etario y momento del día, destacando los peaks de actividad.</figcaption>
       </figure>
     </section>
 
     <!-- Tablas de datos -->
-    <section class="card">
+    <section class="body">
       <h2 style="margin:0 0 8px; font-size: clamp(16px, 2.8vw, 18px); font-weight:600; color:#111;">Tablas de datos</h2>
       <div class="table-wrap">
         <table class="table">
@@ -135,18 +135,19 @@
       </div>
     </section>
 
-    <!-- Botones para descargas -->
-    <section class="controls" aria-label="Descargas de gráficos">
-      <a class="btn" href="grafico-radial.svg" download>Descargar gráfico radial</a>
-      <a class="btn" href="grafico-divergente.svg" download>Descargar gráfico divergente</a>
-      <a class="btn" href="grafico-heatmap.svg" download>Descargar heatmap</a>
-    </section>
+    <!-- Botones para abrir en nueva pestaña -->
+<section class="controls" aria-label="Gráficos">
+  <a class="btn" href="grafico-radial.svg" target="_blank">Abrir gráfico radial</a>
+  <a class="btn" href="grafico-divergente.svg" target="_blank">Abrir gráfico divergente</a>
+  <a class="btn" href="grafico-heatmap.svg" target="_blank">Abrir heatmap</a>
+</section>
+
   </main>
 
   <footer>
     Lunes 25 de Agosto de 2025 | Taller de ideación y creatividad | Sección 1
     <div>
-      Código HTML publicado con <a href="https://github.com/antomarinooo" target="_blank" rel="noopener">@antomarinoo en github</a>
+      Código HTML publicado con <a href="https://github.com/antomarinooo" target="_blank" rel="noopener">@antomarinooo en github</a>
     </div>
   </footer>
 </body>
